<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_line_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/address_line_1"
            android:text="@={viewModel.line1}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_line_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/address_line_2"
            android:text="@={viewModel.line2}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_line_1" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:text="@={viewModel.city}"
            app:layout_constraintEnd_toStartOf="@+id/states"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_line_2" />

        <Spinner
            android:id="@+id/states"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:entries="@array/states"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toBottomOf="@id/address_line_2"
            app:stateValue="@{viewModel.state}" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/zip"
            android:text="@={viewModel.zip}"
            app:layout_constraintEnd_toStartOf="@+id/states"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city" />

        <Button
            android:id="@+id/findRepresentatives"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:background="@color/colorPrimary"
            android:onClick="@{()-> viewModel.getRepresentatives()}"
            android:text="@string/find_my_representatives"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zip" />

        <Button
            android:id="@+id/useMyLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:background="@color/colorPrimary"
            android:onClick="@{()-> viewModel.startLocation()}"
            android:text="@string/use_my_location"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/findRepresentatives" />

        <TextView
            android:id="@+id/myRpresentativesHeader"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:text="@string/find_my_representatives"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/useMyLocation" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representativesList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myRpresentativesHeader" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>